--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,45 @@ article {
 .rightBtn {
   right: -1rem;
 }
+
+/* Paginator styles */
+.paginator {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  position: absolute;
+  top: -2rem;
+  left: 50%;
+  transform: translateX(-50%);
+
+  width: 100%;
+  max-width: 30rem;
+  height: 2rem;
+}
+
+.hr {
+  position: absolute;
+
+  width: 100%;
+  height: 2px;
+
+  background-color: gray;
+}
+
+.dot {
+  height: 1rem;
+  width: 1rem;
+
+  border-radius: 50%;
+
+  background-color: gray;
+  z-index: 1;
+
+  transition: all 1s;
+}
+
+.dot.active {
+  box-shadow: 0 0 0 4px grey;
+  background-color: white;
+}
